--- a/estilos.css
+++ b/estilos.css
@@ -58,7 +58,7 @@ a{
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     text-align: center;
 }
 
