--- a/estilos.css
+++ b/estilos.css
@@ -58,7 +58,7 @@ a{
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: start;
     text-align: center;
 }
 
@@ -81,10 +81,11 @@ a{
 }
 
 .enlaces_nav a{
-    display: block;
-    align-items: center;
-    margin: 2rem auto;
-    padding: 0 2rem;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    margin: 4rem 0 0 1rem;
+    padding: .5rem 1rem;
     text-decoration: none;
     background-color: var(--negro);
     color: var(--blanco);
@@ -95,7 +96,11 @@ a{
     -o-border-radius: 1rem;
 }
 
+
 @media (min-width: 520px) {
+    .enlaces_nav{
+        margin-top: -2rem;
+    }
     .enlaces_nav a{
         display: inline-block;
     }
@@ -112,6 +117,7 @@ a{
         display: flex;
         flex-direction: row;
         gap: 2rem;
+        margin-top: -2rem;
     }
     .enlaces_nav a{
         font-size: 1.2rem;
@@ -122,6 +128,8 @@ a{
 .logo{
     width: 9rem;
     margin-top: .5rem;
+    margin-bottom: -1rem;
+    margin-left: .5rem;
 }
 
 .logo img{
